@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

left to right direction

class Player {
    name
    password
    budget
}

class Station {
    name
    capacity
    centre
}

class StationType{
    radius
    cost
}

class Building {
}

class BuildingType {
    upgrade
    cost
}

class Scenario {
}

class Position{
    xCoordinate
    yCoordinate
}

class Cargo {
    quantity
}

class CargoStatus{
    supply
    demand
}

class ResourceType{
    value
}

class TimeRestriction{
    year
}

Player "1" -- "*" Station: builds >
Player "*" -- "1" Scenario : selects >
Player "1" -- "*" Station : builds >
Player "1" -- "*" Building: builds >
Scenario "1" -- "*" Station : contains >
Scenario "1" -- "*" Building: contains >
Station "*" -- "1 "Building:  upgrades with  >
Station "1" -- "1" StationType: has >
Station "*" -- "1" Position: has >
Building "1" -- "1" BuildingType : has >
Station "1" -- "*" Cargo : stores >
Cargo "1" -- "1" ResourceType: has >
Cargo "1" -- "1" CargoStatus: has >
Scenario "1" -- "*" TimeRestriction: includes >
TimeRestriction "1" -- "*" BuildingType: affects >


@enduml